# PySide6Plot

./: .gitignore  README.md  pyproject.toml
PySide6Plot/: __init__.py
PySide6Plot/compoents/: __init__.py  average_line.py  draw_line.py  frame_recorder.py  zoom_move.py
PySide6Plot/libs/: __init__.py  constant.py  data_handler.py  helpers.py  plot_item.py  style.py
PySide6Plot/widgets/: __init__.py  colorful_toggle_button.py  fluent_scroller.py  line_card.py  navigation_widget.py  q_plot_widget.py  removable_table.py  transparent_Line_edit.py  transparent_selector.py  value_select_box.py  zoom_bar.py
examples/: price_volume_plotter.py  qplotwidget_line_plot.py  single_plotter.py
